samples/_failures_safe/1761394063_f0024c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_830aebdb.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_830aebdb.c:177:9: error: expected expression at end of input
  177 |         case TOKEN_IDENTIFIER: return
      |         ^~~~
./samples/SAFE/__tmp_830aebdb.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_830aebdb.c:177:9: error: expected declaration or statement at end of input
